src/objects/Segment__c.object
<CustomObject>
    <fields>
        <fullName>Range_of_Rates_Final__c</fullName>
        <label>Range of Rates - Final</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_of_Rates_Prelim__c</fullName>
        <label>Range of Rates - Prelim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebuttal_Briefs_Due__c</fullName>
        <label>Rebuttal Briefs Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebuttal_Comments_Due__c</fullName>
        <label>Rebuttal Comments Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_Request_to_Consider_Sampling__c</fullName>
        <label>Receive Request to Consider Sampling?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Filed__c</fullName>
        <label>Request Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent_File_Substantive_Response__c</fullName>
        <label>Respondent File Substantive Response?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_to_address_zeroing_in_Segments__c</fullName>
        <description>Conduct 240-day review to address zeroing in underlying segments?</description>
        <inlineHelpText>Conduct 240-day review to address zeroing in underlying segments?</inlineHelpText>
        <label>Review to address zeroing in Segments?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by a Schedulable class to cause the Tolling Date Service to recalculate tolling days whenever a calculated announcement date is equal to &quot;yesterday when the associated trigger calculates the next announcement date.</description>
        <inlineHelpText>For system use only.</inlineHelpText>
        <label>Schedule Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_Determination__c</fullName>
        <label>Scope Determination</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Language_Changes__c</fullName>
        <label>Scope Language Change(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <formula>ADCVD_Case_Number__c +&apos;--&apos;+ Name</formula>
        <label>Segment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Outcome__c</fullName>
        <label>Segment Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Rescission</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Deficient</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Partial Rescission</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rejected/Deficient/Negative Finding</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>How To Proceed</fullName>
                </value>
                <value>
                    <fullName>Prelim</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Amend Final</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Customs</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Litigation Hold</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rejected/Deficient/Negative Finding</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Remand/International Litigation</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>With the Court</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Withdrawn/Rescinded</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substantive_Response_Due_For_All_Parties__c</fullName>
        <label>Substantive Response Due For All Parties</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunset_Review_Type__c</fullName>
        <label>Sunset Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspension_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspension Agreement</label>
        <referenceTo>Suspension_Agreement__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tolling_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tolling Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Circumvention_Inquiry__c</fullName>
        <label>Type of Circumvention Inquiry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchandise Completed or Assembled in United States</fullName>
                </value>
                <value>
                    <fullName>Merchandise Completed or Assembled in other Foreign Countries</fullName>
                </value>
                <value>
                    <fullName>Minor Alterations of Merchandise</fullName>
                </value>
                <value>
                    <fullName>Later-Developed Merchandise</fullName>
                </value>
                <value>
                    <fullName>Minor Altercations of Merchandise</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Requestor__c</fullName>
        <label>Type of Requestor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                </value>
                <value>
                    <fullName>U.S. Importer</fullName>
                </value>
                <value>
                    <fullName>Domestic Interested Party</fullName>
                </value>
                <value>
                    <fullName>Self-Initiated by the Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Scope_Ruling__c</fullName>
        <label>Type of Scope Ruling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K (1)</fullName>
                </value>
                <value>
                    <fullName>K (2)</fullName>
                </value>
                <value>
                    <fullName>Plain Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_ACE_Customs_Module__c</fullName>
        <description>Update ACE (Customs Module) that Order is revoked</description>
        <inlineHelpText>Update ACE (Customs Module) that Order is revoked</inlineHelpText>
        <label>Update ACE (Customs Module)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verification_if_needed__c</fullName>
        <label>Verification (if needed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Was_Product_Prelim_Determine_in_Scope__c</fullName>
        <label>Was Product Prelim Determine in Scope?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Product_Prelim_Determine_on_Scope__c</fullName>
        <label>Was Product Prelim Determine on Scope?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_product_determined_to_be_in_scope__c</fullName>
        <label>Was product determined to be in scope?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_to_Use_For_Respondent_Selection__c</fullName>
        <label>What to Use For Respondent Selection?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBP Data</fullName>
                </value>
                <value>
                    <fullName>Quantity and Value Questionaires</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_you_Amend_the_Final__c</fullName>
        <description>Will you Amend the Final?</description>
        <inlineHelpText>Will you Amend the Final?</inlineHelpText>
        <label>Will you Amend the Final?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Period_Covered_End_Date__c</columns>
        <columns>Product_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Segments</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Calculated_Preliminary_Signature__c</columns>
        <columns>Next_Major_Deadline__c</columns>
        <columns>Next_Due_to_DAS_Deadline__c</columns>
        <columns>Next_Office_Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initiation,How To Proceed,Prelim,Final,Amend Final</value>
        </filters>
        <label>All Active Segments</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Segments</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Segments</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Segments</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Segments</label>
    </listViews>
    <listViews>
        <fullName>All_Segment_in_Litigation_Hold</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <label>All Segments in Litigation Hold</label>
    </listViews>
    <listViews>
        <fullName>All_Segments_in_Litigation</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Litigation</value>
        </filters>
        <label>All Segments in Litigation</label>
    </listViews>
    <listViews>
        <fullName>Segment_ClosedLocked_Queue_Segment</fullName>
        <filterScope>Queue</filterScope>
        <label>Segment ClosedLocked Queue</label>
        <queue>Segment_ClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Segment_Open_Queue_Segment</fullName>
        <filterScope>Queue</filterScope>
        <label>Segment Open Queue</label>
        <queue>Segment_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Segments_MigratedClosedLocked_Queue_Segment</fullName>
        <filterScope>Queue</filterScope>
        <label>Segments MigratedClosedLocked Queue</label>
        <queue>Segments_MigratedClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Segment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <recordTypes>
        <fullName>Administrative_Review</fullName>
        <active>true</active>
        <label>Administrative Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Anti_Circumvention_Review</fullName>
        <active>true</active>
        <label>Anti-Circumvention Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Changed_Circumstances_Review</fullName>
        <active>true</active>
        <label>Changed Circumstances Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expedited_Review</fullName>
        <active>true</active>
        <label>Expedited Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Shipper_Review</fullName>
        <active>true</active>
        <label>New Shipper Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scope_Inquiry</fullName>
        <active>true</active>
        <label>Scope Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sunset_Review</fullName>
        <active>true</active>
        <label>Sunset Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACR_Final_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, 
AND($RecordType.DeveloperName = &quot;Anti_Circumvention_Review&quot;, 
Final_Extension_of_days__c &lt; 0))</errorConditionFormula>
        <errorMessage>Final Extension (# of days) cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACR_Initiation_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Anti_Circumvention_Review&quot;, 
 OR(Initiation_Extension_of_days__c &gt; 45,  Initiation_Extension_of_days__c  &lt; 0)
))</errorConditionFormula>
        <errorMessage>Initiation Extension can only range from 1-45 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACR_Prelim_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Anti_Circumvention_Review&quot;, 
 Prelim_Extension__c &lt; 0
))</errorConditionFormula>
        <errorMessage>Preliminary Extension cannot be less than zero days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_Bound_If_Prelim_Extension_Exists</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND($RecordType.DeveloperName = &quot;Administrative_Review&quot;, 
NOT(ISBLANK( Prelim_Extension__c)), OR(Final_Extension_of_days__c &gt; 60, Final_Extension_of_days__c &lt; 0)))</errorConditionFormula>
        <errorMessage>If there is a value in preliminary extension # of days, the bound for final extension is 1-60 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_Bound_If_Prelim_Extension_Not_Exists</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND($RecordType.DeveloperName = &quot;Administrative_Review&quot;, 
ISBLANK( Prelim_Extension__c), OR(Final_Extension_of_days__c &gt; 180, Final_Extension_of_days__c &lt; 0)))</errorConditionFormula>
        <errorMessage>If there is no value in preliminary extension # of days, the bound of final extension is 1-180 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_Prelim_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Administrative_Review&quot;, 
 OR(Prelim_Extension__c &gt; 120, Prelim_Extension__c &lt; 0)
))</errorConditionFormula>
        <errorMessage>Preliminary Extension can only range from 1-120 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_Prelim_Extension_Neg</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Administrative_Review&quot;, 
 Prelim_Extension__c &lt; 0
))</errorConditionFormula>
        <errorMessage>Preliminary Extension must be greater than zero days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_max_180_days_if_prelim_extend_is_null</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND($RecordType.DeveloperName = &quot;Administrative Review&quot;,
  OR(
    AND(
      NOT(ISBLANK( Prelim_Extension__c)),  
      Final_Extension_of_days__c  &gt; 60
    ),
    AND(
      ISBLANK( Prelim_Extension__c ),
      OR(
        Final_Extension_of_days__c &gt; 180,
        Final_Extension_of_days__c &lt; 0
      )
    )
  )
))</errorConditionFormula>
        <errorMessage>Final extension # of days can only range from 0-180 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Amended_Final_Determ_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Amended Final Signature Date until the Calculate Amended Final Signature Date is not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Amended_Final_Signature__c ), 
NOT( ISNULL( Actual_Amended_Final_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Amended Final Signature Date must be populated in order to enter Actual Amended Final Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Final_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Final Signature Date until the Calculate Final Signature Date is not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Final_Signature__c ), 
NOT(ISNULL( Actual_Final_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Final Signature Date must be populated in order to enter Actual Final Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Initiation_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Initiation Signature Date until the Calculate initiation Signature Date in not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Initiation_Signature__c ), 
NOT( ISNULL( Actual_Initiation_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Initiation Signature Date must be populated in order to enter Actual Initiation Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Preliminary_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Preliminary Signature Date until the Calculate Preliminary Signature Date in not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Preliminary_Signature__c ), 
NOT( ISNULL( Actual_Preliminary_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Preliminary Signature Date must be populated in order to enter Actual Preliminary Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bound_If_Prelim_Extension_Exists</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND($RecordType.DeveloperName = &quot;Administrative_Review&quot;, 
NOT(ISBLANK( Prelim_Extension__c)), OR(Final_Extension_of_days__c &gt; 60, Final_Extension_of_days__c &lt; 0)))</errorConditionFormula>
        <errorMessage>If there is a value in preliminary extension # of days, the bound for final extension is 1-60 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bound_If_Prelim_Extension_Not_Exists</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND($RecordType.DeveloperName = &quot;Administrative_Review&quot;, 
ISBLANK( Prelim_Extension__c), OR(Final_Extension_of_days__c &gt; 180, Final_Extension_of_days__c &lt; 0)))</errorConditionFormula>
        <errorMessage>If there is no value in preliminary extension # of days, the bound of final extension is 1-180 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCR_Final_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Changed_Circumstances_Review&quot;, 
  Final_Extension_of_days__c  &lt; 0
))</errorConditionFormula>
        <errorMessage>Final Extension cannot be less than zero days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCR_Initiation_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Changed_Circumstances_Review&quot;, 
 OR( Initiation_Extension_of_days__c &gt; 45,  Initiation_Extension_of_days__c &lt; 0)
))</errorConditionFormula>
        <errorMessage>Initiation Extension can only range from 1-45 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCR_Prelim_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Changed_Circumstances_Review&quot;, 
 Prelim_Extension__c &lt; 0
))</errorConditionFormula>
        <errorMessage>Preliminary Extension cannot be less than zero days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_Instruction_Required</fullName>
        <active>true</active>
        <description>Cannot answer Have_Custom_Instruction_been_sent__c unless Litigation_YesNo__c is populated.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND (
  ISBLANK(TEXT(Litigation_YesNo__c )),
  NOT(ISBLANK(TEXT(Have_Custom_Instruction_been_sent__c)))
))</errorConditionFormula>
        <errorMessage>Litigation cannot be blank when Have Custom Instructions is populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Decision_on_How_to_Proceed_Required</fullName>
        <active>true</active>
        <description>Record Type: Scope Inquiry
Decision on How to Proceed field is required when value is set for the field Actual Date of Decision on How to Proceed.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND(
NOT(ISBLANK( Actual_Date_of_Decision_on_HoP__c)),
ISPICKVAL(Decision_on_How_to_Proceed__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>&quot;Decision on How to Proceed&quot; field is required when value is entered for &quot;Actual Date of Decision - How to Proceed&quot; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deficient_Or_Withdrawn_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND ( 
ISNULL(Deficient_or_Withdrawn_Date__c), 
OR( 
ISPICKVAL(Segment_Outcome__c, &apos;Deficient&apos;), 
ISPICKVAL(Segment_Outcome__c, &apos;Withdrawn&apos;)) 
))</errorConditionFormula>
        <errorDisplayField>Deficient_or_Withdrawn_Date__c</errorDisplayField>
        <errorMessage>The Deficient or Withdrawn date is required when Segment Outcome is &quot;Deficient&quot; or &quot;Withdrawn&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ER_Final_Extension</fullName>
        <active>true</active>
        <description>Legend to the Initials Placed on each rule name
AR = Admin Review
ACR = Anti-Circumvention Review
CCR = Changed Circumstances Review
ER = Expedited Review
NSR = New Shipper Review
SI = Scope Inquiry
SR = Sunset Review</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
 $RecordType.DeveloperName = &quot;Expedited_Review&quot;, 
 Final_Extension_of_days__c &gt; 60 || Final_Extension_of_days__c &lt; 0
))</errorConditionFormula>
        <errorMessage>Final Extension (# of days) cannot exceed more than 60 days</errorMessage>
    </validationRules>
</CustomObject>